Added Scheduled Tasks and Convert m3u to Stream

--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -12,6 +12,9 @@
           <a class="nav-link" th:href="@{/resetDatabase}">Reload m3u</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" th:href="@{/convertToStream}">m3u to Stream</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" th:href="@{/viewLog}">View Log</a>
         </li>
         <li class="nav-item">
