--- a/M3UToolsJPA/src/main/resources/templates/items.html
+++ b/M3UToolsJPA/src/main/resources/templates/items.html
@@ -7,16 +7,12 @@
 	content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
 <title>M3UToolsJPA</title>
 
-<link rel="stylesheet" type="text/css"
-	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-	integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-	crossorigin="anonymous" referrerpolicy="no-referrer" />
-<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript"
-	th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{webjars/font-awesome/5.8.2/js/all.js}"></script>
+<link rel="stylesheet" th:href="@{webjars/font-awesome/5.8.2/css/all.css}"/>
+<link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
 
 <script type="text/javascript">
 	function groupChange(selectObj) {
@@ -27,6 +23,47 @@
 			selectObj.form.submit(which);
 		}
 	}
+	
+	function openInformationModal(row) { // begin function
+
+    	var val = row.getAttribute("value");
+    	var api = document.getElementById("moviedbapi").value;
+    	var url = document.getElementById("moviedbsearchURL").value;
+    	var movieurl = document.getElementById("moviedbsearchMovieURL").value;
+    	
+    	$.ajax({ // begin ajax
+        	url: url,
+            data: {
+                api_key: api,
+                language: "en-GB",
+                query: val
+            },
+            dataType : 'json',
+            context : this,
+            success: function(data) {
+            	$.ajax({
+                	url: movieurl + "/" + data.results[0].id,
+    	            data: {
+    	                api_key: api,
+    	                language: "en-GB"
+    	            },
+    	            dataType : 'json',
+    	            context : this,
+    	            error: function() {
+    	            	alert("No information available");
+    	            },
+                    success: function(data) {
+                    	console.log(data);
+                        console.log(data.overview);
+                        $("#modalTitleH4").html(data.title);
+                        $("#modalBodyDiv").html(data.overview);
+                        $("#informationModal").modal("show");
+                    }
+            	})
+            }
+        }) //end ajax
+    } // end function
+
 </script>
 </head>
 
@@ -85,7 +122,8 @@
 					<tr>
 						<th hidden="true" scope="col">Id</th>
 						<th scope="col">Title</th>
-						<th ></th>
+						<th scope="col"></th>
+						<th scope="col"></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -97,10 +135,16 @@
 						name="name" id="name" />
 						<button type="submit" class="btn btn-default btn-sm" name="action"
 							id="btndownload" value="download">
-							<span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-							Download
+							<i class="fa fa-download fa-lg"></i>
 						</button></td>
 				</form>
+				<td><input type="hidden" th:value="${item.search}"
+					name="searchInfo" id="searchInfo" />
+					<button type="submit" class="btn btn-default btn-sm"
+						name="btninformation" id="btninformation"
+						th:onclick="openInformationModal(this);" th:value="${item.search}">
+						<i class="fa fa-info-circle fa-lg"></i>
+					</button></td>
 					</tr>
 				</tbody>
 			</table>
@@ -165,6 +209,30 @@
 				</div>
 			</div>
 		</div>
+	</div>
+	
+	<div id="informationModal" class="modal fade" role="dialog">
+		<div class="modal-dialog">
+			<!-- Modal content-->
+			<div class="modal-content">
+				<div class="modal-header">
+<!-- 					<button type="button" class="close" data-dismiss="modal">&times;</button> -->
+					<h4 class="modal-title" id="modalTitleH4"></h4>
+				</div>
+				<div class="modal-body" id="modalBodyDiv"></div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div>
+		<input type="hidden" name="moviedbapi" id="moviedbapi"
+			th:value="${movieDb.api}" /> <input type="hidden" name="moviedburl"
+			id="moviedbsearchURL" th:value="${movieDb.url}" /> <input
+			type="hidden" name="moviedbmovieURL" id="moviedbsearchMovieURL"
+			th:value="${movieDb.movieURL}" />
 	</div>
 
 	<div th:replace="fragments/footer :: footer"></div>
