--- a/M3UToolsJPA/src/main/resources/templates/paged.html
+++ b/M3UToolsJPA/src/main/resources/templates/paged.html
@@ -13,7 +13,8 @@
 <title>M3U Tools</title>
 
 <!-- Bootstrap core CSS -->
-<link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
+<link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
+<!-- <link rel="stylesheet" th:href="@{/css/bootstrap.css}" /> -->
 <link rel="stylesheet" th:href="@{/css/stylesheet.css}" />
 
 <script type="text/javascript">
