--- a/M3UToolsJPA/src/main/resources/templates/status.html
+++ b/M3UToolsJPA/src/main/resources/templates/status.html
@@ -10,16 +10,14 @@
 <link rel="icon" href="../../favicon.ico">
 
 <title>M3U Downloader</title>
-<link rel="stylesheet" type="text/css"
-	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
+<script th:src="@{webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{webjars/font-awesome/5.8.2/js/all.js}"></script>
+<link rel="stylesheet" th:href="@{webjars/font-awesome/5.8.2/css/all.css}"/>
+<link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-	integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-	crossorigin="anonymous" referrerpolicy="no-referrer" />
-<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript"
-	th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
 <script src="//cdn.jsdelivr.net/sockjs/1/sockjs.min.js"
 	type="text/javascript"></script>
 <script
