--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -16,6 +16,7 @@
           <a class="dropdown-item" th:href="@{/resetDatabase}">Reset Database</a>
           <a class="dropdown-item" th:href="@{/resetM3UFile}">Reset M3UFile</a>
           <a class="dropdown-item" th:href="@{/convertToStream}">Convert M3U to strm</a>
+          <a class="dropdown-item" th:href="@{/reloadEPG}">Reload EPG</a>
           <a class="dropdown-item" th:href="@{/properties}">Properties</a>
         </div>
       </li>
