--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -8,24 +8,23 @@
     </button>
     <div class="collapse navbar-collapse" id="topNavbar">
       <ul class="navbar-nav">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fa fa-tasks fa-lg"></i> Tasks
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" th:href="@{/resetDatabase}">Reset Database</a>
-          <a class="dropdown-item" th:href="@{/resetM3UFile}">Reset M3UFile</a>
-          <a class="dropdown-item" th:href="@{/convertToStream}">Convert M3U to strm</a>
-          <a class="dropdown-item" th:href="@{/reloadEPG}">Reload EPG</a>
-          <a class="dropdown-item" th:href="@{/properties}">Properties</a>
-        </div>
-      </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/viewLog}">View Log</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/showStatus}">Status</a>
-        </li>
+	      <li class="nav-item dropdown">
+	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	          <i class="fa fa-tasks fa-lg"></i></a>
+	        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+	          <a class="dropdown-item" th:href="@{/resetDatabase}">Reset Database</a>
+	          <a class="dropdown-item" th:href="@{/resetM3UFile}">Reset M3UFile</a>
+	          <a class="dropdown-item" th:href="@{/convertToStream}">Convert M3U to strm</a>
+	          <a class="dropdown-item" th:href="@{/reloadEPG}">Reload EPG</a>
+	          <a class="dropdown-item" th:href="@{/properties}">Properties</a>
+	        </div>
+	      </li>
+	        <li class="nav-item">
+	          <a class="nav-link" th:href="@{/viewLog}">View Log</a>
+	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" th:href="@{/showStatus}">Status</a>
+	        </li>
       </ul>
     </div>
   </nav>
