--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -25,6 +25,9 @@
 	        <li class="nav-item">
 	          <a class="nav-link" th:href="@{/showStatus}">Status</a>
 	        </li>
+	        <li class="nav-item">
+	          <a class="nav-link" th:href="@{/search}">Search</a>
+	        </li>
       </ul>
     </div>
   </nav>
