--- a/M3UToolsJPA/src/main/resources/templates/properties.html
+++ b/M3UToolsJPA/src/main/resources/templates/properties.html
@@ -9,7 +9,7 @@
 <title>M3UToolsJPA</title>
 
 <script th:src="@{webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{webjars/bootstrap/js/bootstrap.min.js}"></script>
+<!-- <script th:src="@{webjars/bootstrap/js/bootstrap.min.js}"></script> -->
 <script th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 <script th:src="@{webjars/font-awesome/5.8.2/js/all.js}"></script>
 <link rel="stylesheet" th:href="@{webjars/font-awesome/5.8.2/css/all.css}"/>
