--- a/M3UToolsJPA/src/main/resources/templates/items.html
+++ b/M3UToolsJPA/src/main/resources/templates/items.html
@@ -151,7 +151,7 @@
 		</div>
 
 		<div th:unless="${items.size() > 0}">
-			<span>No channels found!</span>
+			<span>No Titles found!</span>
 		</div>
 
 		<nav aria-label="Pagination" th:if="${totalPages > 0}">
