Initial groundwork for TV Channels selection

--- a/M3UToolsJPA/src/main/resources/templates/items.html
+++ b/M3UToolsJPA/src/main/resources/templates/items.html
@@ -100,7 +100,7 @@
 							</div>
 						</div>
 					</div>
-					<div></div>
+					<div> TV Channels Only <input type="checkbox" name="tvChannelsOnly" th:checked="${tvChannelsOnly}"/></div>
 					<div class="col-md-3 input-group mt-2">
 						<div class="input-group-prepend">
 							<label class="input-group-text" for="pageSize">Items per
