--- a/M3UToolsJPA/src/main/resources/templates/tvChannels.html
+++ b/M3UToolsJPA/src/main/resources/templates/tvChannels.html
@@ -72,7 +72,7 @@
 	<div th:replace="fragments/header :: header"></div>
 
 	<div class="container-fluid" style="max-width: 1024px; margin: 0 auto;">
-		<h2 class="text-center">Channels</h2>
+		<h2 class="text-center">TV Channels</h2>
 
 		<div th:if="${message != null}"
 			class="alert alert-success alert-dismissible fade show text-center message"
