--- a/M3UToolsJPA/src/main/resources/templates/filters.html
+++ b/M3UToolsJPA/src/main/resources/templates/filters.html
@@ -23,7 +23,7 @@
 		<h2 class="text-center">Filters</h2>
 
 		<div>
-			<form action="#" th:action="@{/download}" method="post">
+			<form action="#" th:action="@{/newFilter}" method="get">
 				<button type="submit" class="btn btn-default btn-sm" name="action"
 					id="btnNewFilter" value="newFilter">
 					<i class="fa fa-plus-square"></i> New
