--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -23,6 +23,9 @@
 	          <a class="nav-link" th:href="@{/viewLog}">View Log</a>
 	        </li>
 	        <li class="nav-item">
+	          <a class="nav-link" th:href="@{/tvchannels}">TV Channels</a>
+	        </li>
+	        <li class="nav-item">
 	          <a class="nav-link" th:href="@{/showStatus}">Status</a>
 	        </li>
 	        <li class="nav-item">
