Implemented ability to selectTV Channels

--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -23,7 +23,7 @@
 	          <a class="nav-link" th:href="@{/viewLog}">View Log</a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link" th:href="@{/tvchannels}">TV Channels</a>
+	          <a class="nav-link" th:href="@{/tvChannels}">TV Channels</a>
 	        </li>
 	        <li class="nav-item">
 	          <a class="nav-link" th:href="@{/showStatus}">Status</a>
