--- a/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
+++ b/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
@@ -3,6 +3,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
 	<title>M3UToolsJPA</title>
+	<script th:src="@{webjars/jquery/jquery.min.js}"></script>
+	<script th:src="@{webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<script th:src="@{webjars/font-awesome/5.8.2/js/all.js}"></script>
+	<link rel="stylesheet" th:href="@{webjars/font-awesome/5.8.2/css/all.css}"/>
 	<link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
 	
 	<script type="text/javascript">
