Spring Boot 3 implementation

--- a/M3UToolsJPA/src/main/resources/templates/items.html
+++ b/M3UToolsJPA/src/main/resources/templates/items.html
@@ -69,7 +69,7 @@
 </head>
 
 <body>
-	<div th:replace="fragments/header :: header"></div>
+	<div th:replace="~{fragments/header :: header}"></div>
 
 	<div class="container-fluid" style="max-width: 1024px; margin: 0 auto;">
 		<h2 class="text-center">Channels</h2>
@@ -158,11 +158,11 @@
 			<ul class="pagination justify-content-center">
 				<li class="page-item"
 					th:classappend="${currentPage == 1} ? 'disabled'"><a
-					th:replace="fragments/paging :: paging(1, '<<', 'First Page')"></a>
+					th:replace="~{fragments/paging :: paging(1, '<<', 'First Page')}"></a>
 				</li>
 				<li class="page-item font-weight-bold"
 					th:classappend="${currentPage == 1} ? 'disabled'"><a
-					th:replace="fragments/paging :: paging(${currentPage - 1}, 'Prev', 'Previous Page')"></a>
+					th:replace="~{fragments/paging :: paging(${currentPage - 1}, 'Prev', 'Previous Page')}"></a>
 				</li>
 				<li class="page-item disabled" th:if="${currentPage - 2 > 1}">
 					<a class="page-link" href="#">...</a>
@@ -171,18 +171,18 @@
 					th:classappend="${page == currentPage} ? 'active'"
 					th:each="page : ${#numbers.sequence(currentPage > 2 ? currentPage - 2 : 1, currentPage + 2 < totalPages ? currentPage + 2 : totalPages)}">
 					<a
-					th:replace="fragments/paging :: paging(${page}, ${page}, 'Page ' + ${page})"></a>
+					th:replace="~{fragments/paging :: paging(${page}, ${page}, 'Page ' + ${page})}"></a>
 				</li>
 				<li class="page-item disabled"
 					th:if="${currentPage + 2 < totalPages}"><a class="page-link"
 					href="#">...</a></li>
 				<li class="page-item font-weight-bold"
 					th:classappend="${currentPage == totalPages} ? 'disabled'"><a
-					th:replace="fragments/paging :: paging(${currentPage + 1},'Next', 'Next Page')"></a>
+					th:replace="~{fragments/paging :: paging(${currentPage + 1},'Next', 'Next Page')}"></a>
 				</li>
 				<li class="page-item"
 					th:classappend="${currentPage == totalPages} ? 'disabled'"><a
-					th:replace="fragments/paging :: paging(${totalPages}, '>>', 'Last Page')"></a>
+					th:replace="~{fragments/paging :: paging(${totalPages}, '>>', 'Last Page')}"></a>
 				</li>
 			</ul>
 		</nav>
@@ -211,11 +211,11 @@
 		</div>
 	</div>
 	
-	<div th:replace="fragments/informationModal :: informationModal"></div>
+	<div th:replace="~{fragments/informationModal :: informationModal}"></div>
 	
-	<div th:replace="fragments/movieDbApi :: movieDbApi"></div>
+	<div th:replace="~{fragments/movieDbApi :: movieDbApi}"></div>
 
-	<div th:replace="fragments/footer :: footer"></div>
+	<div th:replace="~{fragments/footer :: footer}"></div>
 
 	<script type="text/javascript">
 		function changePageSize() {
