--- a/M3UToolsJPA/src/main/resources/templates/filters.html
+++ b/M3UToolsJPA/src/main/resources/templates/filters.html
@@ -17,7 +17,7 @@
 	th:href="@{webjars/bootstrap/css/bootstrap.min.css}" />
 <body>
 
-	<div th:replace="fragments/header :: header"></div>
+	<div th:replace="~{fragments/header :: header}"></div>
 
 	<div class="container-fluid" style="max-width: 1024px; margin: 0 auto;">
 		<h2 class="text-center">Filters</h2>
@@ -86,6 +86,6 @@
 		</div>
 
 	</div>
-	<div th:replace="fragments/footer :: footer"></div>
+	<div th:replace="~{fragments/footer :: footer}"></div>
 </body>
 </html>
