--- a/M3UToolsJPA/src/main/resources/templates/status.html
+++ b/M3UToolsJPA/src/main/resources/templates/status.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-		<div th:replace="fragments/header :: header"></div>
+		<div th:replace="~{fragments/header :: header}"></div>
 		
 		<div class="container">
 
@@ -52,7 +52,7 @@
 
 	</div>
 	<!-- /.container -->
-<div th:replace="fragments/footer :: footer"></div>
+<div th:replace="~{fragments/footer :: footer}"></div>
 
 	<!-- Bootstrap core JavaScript
 ================================================== -->
