--- a/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
+++ b/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
@@ -59,6 +59,7 @@
 					<span class="float-right">
 						    <input type="submit" id="submitButton" class="btn btn-success" th:value="Save">
 						    <input type="reset" id="resetButton" class="btn btn-danger" th:value="Reset"/>
+						    <input type = "checkbox" th:name="showAll" th:checked="false"  th:onclick="|window.location.href='/showAllSelected'|"/> Show All Selected
 					</span>
 					<table class="table">
 						<thead>
@@ -71,7 +72,7 @@
 						<tbody>
 						<tr th:each="channel, itemStat : ${form.channels}">
 							<td><input th:name="|channels[${itemStat.index}].id|" th:value="${channel.getId()}"/></td>
-							<td><input th:placeholder="Name + ' ' + ${itemStat.count}" th:name="|channels[${itemStat.index}].tvgName|" th:value="${channel.getTvgName()}"
+							<td><input th:size="30" th:placeholder="Name + ' ' + ${itemStat.count}" th:name="|channels[${itemStat.index}].tvgName|" th:value="${channel.getTvgName()}"
 									   required /></td>
 							<td><input type = "checkbox" th:placeholder="Selected + ' ' + ${itemStat.count}" th:name="|channels[${itemStat.index}].selected|"
 									   th:checked="${channel.isSelected()}"/></td>
