--- a/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
+++ b/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
@@ -71,6 +71,7 @@
 						<tr>
 							<th> Id</th>
 							<th> Tvg-Id</th>
+							<th> GroupId</th>
 							<th> Title</th>
 							<th> Selected</th>
 						</tr>
@@ -79,6 +80,7 @@
 						<tr th:each="channel, itemStat : ${form.channels}">
 							<td><input th:name="|channels[${itemStat.index}].id|" th:value="${channel.getId()}"/></td>
 							<td><input th:name="|channels[${itemStat.index}].tvgId|" th:value="${channel.getTvgId()}"/></td>
+							<td><input th:name="|channels[${itemStat.index}].groupId|" th:value="${channel.getGroupId()}"/></td>
 							<td><input th:size="30" th:placeholder="Name + ' ' + ${itemStat.count}" th:name="|channels[${itemStat.index}].tvgName|" th:value="${channel.getTvgName()}"
 									   required /></td>
 							<td><input type = "checkbox" th:placeholder="Selected + ' ' + ${itemStat.count}" th:name="|channels[${itemStat.index}].selected|"
