--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -1,36 +1,42 @@
 <header th:fragment="header">
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <a class="navbar-brand" th:href="@{/}">
-      <i class="fa fa-home fa-lg" aria-hidden="true"></i> M3UTools JPA
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="topNavbar">
-      <ul class="navbar-nav">
-	      <li class="nav-item dropdown">
-	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          <i class="fa fa-tasks fa-lg"></i></a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-	          <a class="dropdown-item" th:href="@{/resetDatabase}">Reset Database</a>
-	          <a class="dropdown-item" th:href="@{/convertToStream}">Convert M3U to strm</a>
-	          <a class="dropdown-item" th:href="@{/reloadEPG}">Reload EPG</a>
-	          <a class="dropdown-item" th:href="@{/properties}">Properties</a>
-	        </div>
-	      </li>
-	        <li class="nav-item">
-	          <a class="nav-link" th:href="@{/viewLog}">View Log</a>
-	        </li>
-	        <li class="nav-item">
-	          <a class="nav-link" th:href="@{/tvChannels}">TV Channels</a>
-	        </li>
-	        <li class="nav-item">
-	          <a class="nav-link" th:href="@{/showStatus}">Status</a>
-	        </li>
-	        <li class="nav-item">
-	          <a class="nav-link" th:href="@{/search}">Search</a>
-	        </li>
-      </ul>
-    </div>
-  </nav>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" th:href="@{/}">M3UToolsJPA</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false">
+							Actions
+						</a>
+						<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+							<li><a class="dropdown-item" th:href="@{/resetDatabase}">Reset Database</a></li>
+							<li><a class="dropdown-item" th:href="@{/convertToStream}">Convert M3U to strm</a></li>
+							<li><a class="dropdown-item" th:href="@{/reloadEPG}">Reload EPG</a></li>
+							<li><a class="dropdown-item" th:href="@{/properties}">Properties</a></li>
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" th:href="@{/viewLog}">View Log</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" th:href="@{/tvChannels}">TV Channels</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" th:href="@{/showStatus}">Status</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" th:href="@{/search}">Search</a>
+					</li>
+
+				</ul>
+			</div>
+		</div>
+	</nav>
+
 </header>
