Update Bootstrap tables

--- a/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
+++ b/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
@@ -72,7 +72,7 @@
 						<input type="submit" id="submitButton" class="btn btn-success" th:value="Save">
 						<input type="reset" id="resetButton" class="btn btn-danger" th:value="Reset" />
 					</div>
-					<table class="table">
+					<table class="table-striped">
 						<thead>
 							<tr>
 								<th> Id</th>
