--- a/M3UToolsJPA/src/main/resources/templates/items.html
+++ b/M3UToolsJPA/src/main/resources/templates/items.html
@@ -118,7 +118,7 @@
 		</div>
 
 		<div th:if="${items.size() > 0}">
-			<table class="table table-hover table-responsive-xl">
+			<table class="table-striped">
 				<thead class="thead-light">
 					<tr>
 						<th hidden="true" scope="col">Id</th>
