--- a/M3UToolsJPA/src/main/resources/templates/properties.html
+++ b/M3UToolsJPA/src/main/resources/templates/properties.html
@@ -56,7 +56,7 @@
 		<p></p>
 
 		<div th:if="${properties.size() > 0}">
-			<table id="table" class="table table-hover table-responsive-xl">
+			<table id="table" class="table-striped">
 				<thead class="thead-light">
 					<tr>
 						<th scope="col">Key</th>
