Table display updates

--- a/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
+++ b/M3UToolsJPA/src/main/resources/templates/editChannelsForm.html
@@ -72,8 +72,8 @@
 						<input type="submit" id="submitButton" class="btn btn-success" th:value="Save">
 						<input type="reset" id="resetButton" class="btn btn-danger" th:value="Reset" />
 					</div>
-					<table class="table-striped align-middle mb-0 bg-white">
-						<thead>
+					<table class="table table-striped">
+						<thead class="table-dark">
 							<tr>
 								<th> Id</th>
 								<th> Tvg-Id</th>
