--- a/M3UToolsJPA/src/main/resources/templates/items.html
+++ b/M3UToolsJPA/src/main/resources/templates/items.html
@@ -118,8 +118,8 @@
 		</div>
 
 		<div th:if="${items.size() > 0}">
-			<table class="table-striped">
-				<thead class="thead-light">
+			<table class="table table-striped">
+				<thead class="table-dark">
 					<tr>
 						<th hidden="true" scope="col">Id</th>
 						<th scope="col">Title</th>
