--- a/M3UToolsJPA/src/main/resources/templates/properties.html
+++ b/M3UToolsJPA/src/main/resources/templates/properties.html
@@ -56,8 +56,8 @@
 		<p></p>
 
 		<div th:if="${properties.size() > 0}">
-			<table id="table" class="table-striped">
-				<thead class="thead-light">
+			<table id="table" class="table table-striped">
+				<thead class="table-dark">
 					<tr>
 						<th scope="col">Key</th>
 						<th scope="col">Value</th>
