--- a/M3UToolsJPA/src/main/resources/templates/fragments/informationModal.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/informationModal.html
@@ -5,11 +5,12 @@
 				<div class="modal-header">
 <!-- 					<button type="button" class="close" data-dismiss="modal">&times;</button> -->
 					<h4 class="modal-title" id="modalTitleH4"></h4>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body" id="modalBodyDiv"></div>
 				<div class="modal-body" id="releaseDate"></div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
