--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -1,20 +1,20 @@
 <header th:fragment="header">
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg bg-body-tertiary">
 		<div class="container-fluid">
 			<a class="navbar-brand" th:href="@{/}">M3UToolsJPA</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-				data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-				<ul class="navbar-nav">
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
-							data-bs-toggle="dropdown" aria-expanded="false">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+							aria-expanded="false">
 							Actions...
 						</a>
-						<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+						<ul class="dropdown-menu">
 							<li><a class="dropdown-item" th:href="@{/resetDatabase}">Reset Database</a></li>
 							<li><a class="dropdown-item" th:href="@{/convertToStream}">Convert M3U to strm</a></li>
 							<li><a class="dropdown-item" th:href="@{/reloadEPG}">Reload EPG</a></li>
@@ -30,13 +30,10 @@
 					<li class="nav-item">
 						<a class="nav-link" th:href="@{/showStatus}">Status</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" th:href="@{/search}">Search</a>
-					</li>
-
 				</ul>
+				<form class="d-flex" role="search">
+					<button type="button" class="btn btn-outline-success" th:onclick="|window.location.href='/search'|">Search</button>
+				</form>
 			</div>
 		</div>
 	</nav>
-
-</header>
