Added search result poster_path to modal dialog

--- a/M3UToolsJPA/src/main/resources/templates/items.html
+++ b/M3UToolsJPA/src/main/resources/templates/items.html
@@ -58,6 +58,7 @@
                         $("#modalTitleH4").html(data.title);
                         $("#modalBodyDiv").html(data.overview);
                         $("#releaseDate").html("Release Date : " + data.release_date);
+                        document.getElementById("posterPath").style.backgroundImage = "url('https://image.tmdb.org/t/p/original" + data.poster_path + "')"
                         $("#informationModal").modal("show");
                     }
             	})
