--- a/M3UToolsJPA/src/main/resources/templates/fragments/header.html
+++ b/M3UToolsJPA/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 <header th:fragment="header">
-	<nav class="navbar navbar-expand-lg bg-body-tertiary">
+	<link rel="stylesheet" th:href="@{css/headerStyle.css}" />
+	<nav class="navbar navbar-expand-lg navbar-dark bg-light gradient-custom">
 		<div class="container-fluid">
 			<a class="navbar-brand" th:href="@{/}">M3UToolsJPA</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
